--- a/client/src/app/common/bootstrap.component.html
+++ b/client/src/app/common/bootstrap.component.html
@@ -1,2 +1,7 @@
-<p>test</p>
+<div class="container-fluid">
+	<div class="container">
+		Tank List
+	</div>
+</div>
+
 <router-outlet></router-outlet>
