--- a/client/src/app/list/list.component.html
+++ b/client/src/app/list/list.component.html
@@ -1,38 +1,55 @@
 <div class="container topbar">
-	<div class="btn-group" role="group">
-		<button *ngFor="let t of tierList" (click)="clickTier(t, $event)" type="button" class="btn {{ selectTier.includes(t) ? 'btn-primary' : 'btn-outline-primary' }}">{{ t }}</button>
-	</div>
-
-	<div class="btn-group" role="group">
-		<button *ngFor="let t of typeList" (click)="clickType(t, $event)" type="button" class="btn {{ selectType.includes(t.id) ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
-	</div>
 
 	<div class="btn-group" role="group">
 		<button *ngFor="let t of keyList" (click)="clickKey(t.id)" type="button" class="btn {{ key === t.id ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
 	</div>
 
 	<div class="btn-group" role="group">
+		<button *ngFor="let t of tierList" (click)="clickTier(t, $event)" type="button" class="btn {{ selectTier.includes(t) ? 'btn-primary' : 'btn-outline-primary' }}">{{ t }}</button>
+	</div>
+
+	<div class="btn-group" role="group">
+		<button *ngFor="let t of typeList" (click)="clickType(t.id, $event)" type="button" class="btn {{ selectType.includes(t.id) ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
+	</div>
+
+	<div class="btn-group" role="group">
 		<button *ngFor="let t of shopList" (click)="clickShop(t.id, $event)" type="button" class="btn {{ selectShop.includes(t.id) ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
 	</div>
 
-	<button (click)="clickByBattle()" type="button" class="btn {{ byBattle ? 'btn-primary' : 'btn-outline-primary' }}">sort by battles</button>
+	<div class="btn-group" role="group">
+		<button *ngFor="let t of nationList" (click)="clickNation(t.id, $event)" type="button" class="btn {{ selectNation.includes(t.id) ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
+	</div>
+
+	<button (click)="clickByBattle()" type="button" class="btn {{ byBattle ? 'btn-primary' : 'btn-outline-primary' }}">按出场排序</button>
+
+	<button (click)="clickHigher()" type="button" class="btn {{ higher ? 'btn-primary' : 'btn-outline-primary' }}">老车长</button>
+</div>
+
+<div class="container-fluid br-line">
+	<div class="container">
+		<div class="row">
+			<div class="col-auto me-auto">红条表示出场率。除了排序条件，其他可按 ctrl + 左键复选</div>
+			<div class="col-auto" *ngIf="li.length">结果数：{{ li.length }}{{ totalNum }}</div>
+		</div>
+	</div>
 </div>
 
 <div class="container">
-	<p>除了排序规则，其他可按 ctrl + 左键复选</p>
-</div>
-
-<div class="container">
-	<table class="table">
-		<tr *ngFor="let t of li">
-			<td>{{ t.tier }}</td>
-			<td>{{ t.name }}</td>
-			<td class="num">{{ t.numShow }}</td>
-			<td class="num">{{ t.rank }}</td>
-			<td class="bar">
-				<div class="val" style="width: {{ t.numWidth }}"></div>
-				<div class="battle" style="width: {{ t.battleWidth }}"></div>
-			</td>
-		</tr>
+	<div class="no-result" *ngIf="!li.length">
+		<p>查无结果，请换个过滤条件，或者 <button class="btn btn-danger" (click)="clickReset()">重置条件</button> </p>
+	</div>
+	<table class="table table-hover" *ngIf="li.length">
+		<tbody>
+			<tr *ngFor="let t of li">
+				<td class="tier">{{ t.tier }}</td>
+				<td class="name">{{ t.name }}</td>
+				<td class="num key-num">{{ t.numShow }}</td>
+				<td class="num">{{ t.rank }}</td>
+				<td class="bar">
+					<div class="val" style="width: {{ t.numWidth }}"></div>
+					<div class="battle" style="width: {{ t.battleWidth }}"></div>
+				</td>
+			</tr>
+		</tbody>
 	</table>
 </div>
