--- a/client/src/app/list/list.component.html
+++ b/client/src/app/list/list.component.html
@@ -48,8 +48,12 @@
 				<td class="num key-num">{{ t.numShow }}</td>
 				<td class="num rank">{{ t.rank }}</td>
 				<td class="bar">
-					<div class="val" style="width: {{ t.numWidth }}"></div>
-					<div class="battle" style="width: {{ t.battleWidth }}"></div>
+					<div class="val-bg">
+						<div class="val" style="width: {{ t.numWidth }}"></div>
+					</div>
+					<div class="battle-bg">
+						<div class="battle" style="width: {{ t.battleWidth }}"></div>
+					</div>
 				</td>
 			</tr>
 		</tbody>
