--- a/client/src/app/list/list.component.html
+++ b/client/src/app/list/list.component.html
@@ -1,30 +1,30 @@
 <div class="container topbar">
 
 	<div class="btn-group" role="group">
-		<button *ngFor="let t of keyList" (click)="clickKey(t.id)" type="button" class="btn {{ key === t.id ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
+		<button [disabled]="!init || null" *ngFor="let t of keyList" (click)="clickKey(t.id)" type="button" class="btn {{ key === t.id ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
 	</div>
 
 	<div class="btn-group" role="group">
-		<button *ngFor="let t of tierList" (click)="clickTier(t, $event)" type="button" class="btn {{ selectTier.includes(t) ? 'btn-primary' : 'btn-outline-primary' }}">{{ t }}</button>
+		<button [disabled]="!init || null" *ngFor="let t of tierList" (click)="clickTier(t, $event)" type="button" class="btn {{ selectTier.includes(t) ? 'btn-primary' : 'btn-outline-primary' }}">{{ t }}</button>
 	</div>
 
 	<div class="btn-group" role="group">
-		<button *ngFor="let t of typeList" (click)="clickType(t.id, $event)" type="button" class="btn {{ selectType.includes(t.id) ? 'btn-primary' : 'btn-outline-primary' }}"><span class="type-icon ty-{{ t.id }}"></span> {{ t.name }}</button>
+		<button [disabled]="!init || null" *ngFor="let t of typeList" (click)="clickType(t.id, $event)" type="button" class="btn {{ selectType.includes(t.id) ? 'btn-primary' : 'btn-outline-primary' }}"><span class="type-icon ty-{{ t.id }}"></span> {{ t.name }}</button>
 	</div>
 
 	<div class="btn-group" role="group">
-		<button *ngFor="let t of shopList" (click)="clickShop(t.id, $event)" type="button" class="btn {{ selectShop.includes(t.id) ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
+		<button [disabled]="!init || null" *ngFor="let t of shopList" (click)="clickShop(t.id, $event)" type="button" class="btn {{ selectShop.includes(t.id) ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
 	</div>
 
 	<div class="btn-group" role="group">
-		<button *ngFor="let t of nationList" (click)="clickNation(t.id, $event)" type="button" class="btn {{ selectNation.includes(t.id) ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
+		<button [disabled]="!init || null" *ngFor="let t of nationList" (click)="clickNation(t.id, $event)" type="button" class="btn {{ selectNation.includes(t.id) ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
 	</div>
 
-	<button (click)="clickByBattle()" type="button" class="btn {{ byBattle ? 'btn-primary' : 'btn-outline-primary' }}">按出场排序</button>
+	<button [disabled]="!init || null" (click)="clickByBattle()" type="button" class="btn {{ byBattle ? 'btn-primary' : 'btn-outline-primary' }}">按出场排序</button>
 
-	<button (click)="clickHigher()" type="button" class="btn {{ higher ? 'btn-primary' : 'btn-outline-primary' }}" title="战斗力前 35% 的玩家">老车长</button>
+	<button [disabled]="!init || null" (click)="clickHigher()" type="button" class="btn {{ higher ? 'btn-primary' : 'btn-outline-primary' }}" title="战斗力前 35% 的玩家">老车长</button>
 
-	<button *ngIf="li.length" (click)="copyURL()" type="button" class="btn {{ lastURI === lastCopy ? 'btn-success' : 'btn-outline-success' }}">复制地址</button>
+	<button [disabled]="!init || null" *ngIf="li.length" (click)="copyURL()" type="button" class="btn {{ lastURI === lastCopy ? 'btn-success' : 'btn-outline-success' }}">复制地址</button>
 </div>
 
 <div class="container-fluid br-line">
@@ -37,14 +37,14 @@
 </div>
 
 <div class="container">
-	<div class="no-result" *ngIf="!li.length">
+	<div class="no-result" *ngIf="!li.length && init">
 		<p>查无结果，请换个过滤条件，或者 <button class="btn btn-danger" (click)="clickReset()">重置条件</button> </p>
 	</div>
 	<table class="table table-hover" *ngIf="li.length">
 		<tbody>
 			<tr *ngFor="let t of li">
 				<td class="num tier">{{ t.tier }}</td>
-				<td class="name">{{ t.name }} <span class="type-icon ty-{{ t.type }}"></span></td>
+				<td class="name"><p>{{ t.name }} <span class="type-icon ty-{{ t.type }}"></span></p></td>
 				<td class="num key-num">{{ t.numShow }}</td>
 				<td class="num rank">{{ t.rank }}</td>
 				<td class="bar">
