--- a/client/src/style/icon.scss
+++ b/client/src/style/icon.scss
@@ -24,5 +24,5 @@
 	display: inline-block;
 	background-size: 1rem 1rem;
 	background-repeat: no-repeat;
-	vertical-align: text-bottom;
+	vertical-align: -10%;
 }
