--- a/client/src/app/list/list.component.html
+++ b/client/src/app/list/list.component.html
@@ -17,7 +17,7 @@
 	</div>
 
 	<div class="btn-group" role="group">
-		<button [disabled]="!init || null" *ngFor="let t of nationList" (click)="clickNation(t.id, $event)" type="button" class="btn {{ selectNation.includes(t.id) ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
+		<button [disabled]="!init || null" *ngFor="let t of nationList" (click)="clickNation(t.id, $event)" type="button" class="flag btn {{ selectNation.includes(t.id) ? 'btn-primary' : 'btn-outline-primary' }}"><img class="flag" src="/assets/flag/{{ t.id }}.png">{{ t.name }}</button>
 	</div>
 
 	<button [disabled]="!init || null" (click)="clickByBattle()" type="button" class="btn {{ byBattle ? 'btn-primary' : 'btn-outline-primary' }}">按出场排序</button>
@@ -34,9 +34,10 @@
 			<div class="col-auto" *ngIf="li.length">结果数：{{ li.length }}{{ totalNum }}</div>
 		</div>
 	</div>
+	<input #xclip type="text" value="" class="xclip">
 </div>
 
-<div class="container">
+<div class="container list-table">
 	<div class="no-result" *ngIf="!li.length && init">
 		<p>查无结果，请换个过滤条件，或者 <button class="btn btn-danger" (click)="clickReset()">重置条件</button> </p>
 	</div>
@@ -44,7 +45,7 @@
 		<tbody>
 			<tr *ngFor="let t of li">
 				<td class="num tier">{{ t.tier }}</td>
-				<td class="name"><p>{{ t.name }} <span class="type-icon ty-{{ t.type }}"></span></p></td>
+				<td class="name"><p><span class="type-icon ty-{{ t.type }}"></span><img class="flag" src="/assets/flag/{{ t.nation }}.png">{{ t.name }}</p></td>
 				<td class="num key-num">{{ t.numShow }}</td>
 				<td class="num rank">{{ t.rank }}</td>
 				<td class="bar">
@@ -59,5 +60,3 @@
 		</tbody>
 	</table>
 </div>
-
-<input #xclip type="text" value="" class="xclip">
