--- a/client/src/app/list/list.component.scss
+++ b/client/src/app/list/list.component.scss
@@ -7,6 +7,10 @@
 	}
 }
 
+div.list-table {
+	padding-bottom: 3rem;
+}
+
 button {
 	user-select: none;
 }
@@ -27,17 +31,31 @@ div.no-result {
 	padding-bottom: 3rem;
 }
 
+img.flag {
+	width: 29px;
+	height: 18px;
+}
+
+button.flag {
+	img {
+		margin-right: 0.5rem;
+	}
+}
+
 td.key-num {
 	width: 90px;
 }
 
 td.name {
 	p {
-		width: 10rem;
+		width: 12rem;
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
 		margin: 0;
+		img.flag {
+			margin-right: 0.5rem;
+		}
 	}
 }
 
