--- a/client/src/app/matrix/matrix.component.html
+++ b/client/src/app/matrix/matrix.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div id="matrix" class="col"></div>
+		<div #box class="col"></div>
 		<div class="col">
 			<div class="name">
 				<p *ngIf="tank?.tier">
