--- a/client/src/app/list/list.component.html
+++ b/client/src/app/list/list.component.html
@@ -29,7 +29,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-auto me-auto">红条表示出场率。除了排序条件，其他可按 ctrl + 左键复选</div>
-			<div class="col-auto" *ngIf="li.length">结果数：{{ li.length }}{{ totalNum }}</div>
+			<div class="col-auto" *ngIf="li.length">结果数：{{ li.length }}{{ totalNum }}，数据抓取日期：{{ srcDate }}</div>
 		</div>
 	</div>
 	<input #xclip type="text" value="" class="xclip">
