--- a/client/src/app/list/list.component.html
+++ b/client/src/app/list/list.component.html
@@ -80,6 +80,9 @@
 						<div class="battle" style="width: {{ t.battleWidth }}"></div>
 					</div>
 				</td>
+				<td class="wiki num">
+					<a target="_blank" href="https://wotgame.cn/zh-cn/tankopedia/{{ t.id }}/">参数</a>
+				</td>
 			</tr>
 		</tbody>
 	</table>
