--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -9,6 +9,11 @@ td.num {
 	font-family: var(--bs-font-monospace);
 }
 
+td > .btn {
+	margin-top: -8px;
+	margin-bottom: -6px;
+}
+
 html, body {
 	height: 100%;
 }
