--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -39,8 +39,8 @@ img.flag {
 	span {
 		font-weight: bold;
 		display: inline-block;
-		padding-left: 0.5rem;
-		padding-right: 0.5rem;
+		padding-left: 0.25rem;
+		padding-right: 0.75rem;
 		&:nth-of-type(1) {
 			color: #008000;
 		}
@@ -59,8 +59,12 @@ td.extra {
 }
 @media (min-width: 1200px) {
 	td.extra {
-		display: block;
+		display: table-cell;
 	}
+}
+
+.no-select::selection, .no-select *::selection {
+  background-color: Transparent;
 }
 
 @import "./icon.scss";
