--- a/client/src/app/common/bootstrap.component.html
+++ b/client/src/app/common/bootstrap.component.html
@@ -6,8 +6,4 @@
 
 <br *ngIf="!prod">
 
-<div class="container" *ngIf="!init">
-	<p>loading ...</p>
-</div>
-
-<router-outlet *ngIf="init"></router-outlet>
+<router-outlet></router-outlet>
