--- a/client/src/app/list/list.component.html
+++ b/client/src/app/list/list.component.html
@@ -112,7 +112,7 @@
 			<div class="modal-body">
 				<div class="row">
 					<div class="col-auto mb-2 btn-group" role="group">
-						<button [disabled]="!init || null" *ngFor="let t of yKeyList" (click)="clickHistoryKey(t.id)" type="button" class="btn {{ historyKey === t.id ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
+						<button [disabled]="!init || null" *ngFor="let t of historyKeyList" (click)="clickHistoryKey(t.id)" type="button" class="btn {{ historyKey === t.id ? 'btn-primary' : 'btn-outline-primary' }}">{{ t.name }}</button>
 					</div>
 					<div class="col-auto mb-2">
 						<button [disabled]="!init || null" (click)="clickHigher()" type="button" class="btn {{ higher ? 'btn-primary' : 'btn-outline-primary' }}" title="战斗力前 35% 的玩家">老车长</button>
