--- a/client/src/app/list/list.component.html
+++ b/client/src/app/list/list.component.html
@@ -94,7 +94,7 @@
 					<a *ngIf="api.tanksgg[t.id]" href="https://tanks.gg/tank/{{ api.tanksgg[t.id] }}" target="_blank" class="btn btn-sm btn-secondary">tanks.gg</a>
 				</td>
 				<td class="extra">
-					<a *ngIf="api.skill4ltu[t.id]" href="https://skill4ltu.eu/{{ t.id }}/{{ api.skill4ltu[t.id] }}" target="_blank" class="btn btn-sm btn-secondary">skill4ltu</a>
+					<a *ngIf="api.skill4ltu[t.id]" href="https://skill4ltu.eu/{{ t.id }}/lion" target="_blank" class="btn btn-sm btn-secondary">skill4ltu</a>
 				</td>
 			</tr>
 		</tbody>
